--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "^13.2.4",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "moralis": "^1.8.0",
+    "moralis-v1": "^1.12.0",
+    "next": "12.1.5",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-moralis": "^1.4.0",
+    "web3": "^1.9.0",
+    "web3uikit": "^1.0.4"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.1"
+    "autoprefixer": "^10.4.4",
+    "eslint": "8.13.0",
+    "eslint-config-next": "12.1.5",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.24"
   }
 }
