--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@pinata/sdk": "^2.1.0",
+    "graphql": "^16.6.0",
     "moralis": "^1.8.0",
     "moralis-v1": "^1.12.0",
     "next": "12.1.5",
@@ -20,6 +21,7 @@
     "web3uikit": "^1.0.4"
   },
   "devDependencies": {
+    "@apollo/client": "^3.7.11",
     "autoprefixer": "^10.4.4",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
